<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WHITE"
    android:orientation="vertical"
    tools:context=".LoginPage">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/redlogo"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                >


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signIn"
                    android:textSize="25sp"
                    android:textColor="#EB978A"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fixedText"
                    android:layout_marginTop="10dp"
                    />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="+88016|"
                    android:inputType="number"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/passText"
                    android:layout_marginTop="10dp"
                    />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="****"
                    android:layout_marginTop="10dp"
                    />

                <Button
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:textColor="#F0AAAD"
                    android:background="@drawable/rectangle"
                    android:layout_marginTop="20dp"
                    />

                <TextView
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:text="@string/forgotText"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:layout_margin="20dp"
            >

            <Button
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:text="@string/create"
                android:textSize="20sp"
                android:textColor="#AF6A64"
                android:background="@drawable/shape"
                />




        </androidx.cardview.widget.CardView>


    </LinearLayout>





</RelativeLayout>